--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 
   <h2 class="headyellow"> Das Fest der Liebe </h2>
  <p>
-  Aber genug von uns! Wir möchten beim Fest der Liebe die Freundschaft und Gemeinschaft zu euch allen feiern! 
-  Dafür nehmen wir uns den 13. September frei und zelebrieren im Rudi & Rosa. Mehr Informationen dazu findet ihr beim blauen Herz 💙.
+  Aber genug von uns! Beim Fest der Liebe die Freundschaft und Gemeinschaft zu euch allen feiern! Mehr Informationen zu Ort, Zeit und Ablauf findet ihr beim blauen Herz 💙.
 </p>
 
 <p>
@@ -85,13 +84,13 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 </p>
 
 <p>
-  Zu- und Absagen könnt ihr unter dem rosa Herz 💖 (eine Textnachricht reicht aber auch aus).
+  Zu- und Absagen könnt ihr unter dem rosa Herz 💖.
 </p>
 
   
-<!--  <div class="headline headyellow-headline">
-  Das Fest der Liebe ist ein Fest, das unsere Liebe feiert.<br>
-</div> -->
+ <div class="headline headyellow-headline">
+  Das Fest der Liebe ist ein Fest, das unsere Liebe feiert.
+</div>
 
 
 </div>
@@ -118,16 +117,18 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     Das Fest der Liebe ist ein Fest, das unsere liebsten Menschen versammelt und eine Geschichte von Freundschaft, Liebe und Gemeinschaft erzählt.
   </div> -->
   
-  <h2 class="headblue">Soll man euch gratulieren oder etwas schenken?</h2>
+   <h2 class="headblue">Gibt es einen Dresscode?</h2>
   <p>
-    Selbstverständlich könnt ihr uns für unsere herausragenden Errungenschaften gratulieren ;). Aber ansonsten freuen wir uns einfach, wenn ihr kommt und uns vielleicht eine Kostprobe eures (geheimen) Talents präsentiert oder ein kleines Spiel vorbereitet. Wir sind ganz gespannt!<br>
-    Außerdem wollen wir schon einmal ankündigen, dass wir nur die Speisen übernehmen können und alle Getränke auf Selbstzahlerbasis angeboten werden ‘:D
+    Kommt so, wie ihr euch am wohlsten fühlt 💃
   </p>
   
-  <h2 class="headblue">Gibt es einen Dresscode?</h2>
+  <h2 class="headblue">Wünscht ihr euch etwas?</h2>
   <p>
-    Kommt so, wie ihr euch am wohlsten fühlt 😊
+  Gerne könnt ihr uns mit einem Beitrag untersützen die Feier zu finanzieren 😊
   </p>
+  
+  
+
 </div>
 
 
@@ -138,16 +139,6 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   <p>Das Fest der Liebe soll lebendig werden – wir freuen uns, wenn ihr mit einem Beitrag dabei seid. Was könntet ihr beisteuern?
   Hier ein paar Ideen; der Kreativität sind natürlich keine Grenzen gesetzt:</p>
 
-  <ul>
-    <li>Rede (z. B. über dein Lieblingsthema)</li>
-    <li>Fotoreihe auf dem Beamer</li>
-    <li>Schwank aus dem Leben / Anekdote</li>
-    <li>Sketch / Theaterstück</li>
-    <li>Tanzworkshop</li>
-    <li>Musikstück</li>
-    <li>Spiel mit der ganzen Gruppe</li>
-  </ul>
-
   <p>Damit der Ablauf reibungslos klappt, plant bitte eure Programmpunkte im Voraus. Meldet euch hierfür beim „Programm-Komitee“ an:</p>
 
   <ul>
@@ -155,24 +146,17 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     <li>Tom Szyslo – Tel. +49 1573 2584 229</li>
   </ul>
 
-  <p>Mit ihnen könnt ihr auch besprechen, welches Equipment ihr für euren Beitrag benötigt. Gebt uns am besten vorher Bescheid, falls ihr Folgendes braucht:</p>
+  <p>Mit ihnen könnt ihr auch besprechen, welches Equipment ihr für euren Beitrag benötigt. Folgendes wird aber auf jeden Fall da sein:</p>
 
   <ul>
     <li>Leinwand & Beamer</li>
     <li>Musikboxen</li>
     <li>Zwei Mikrofone</li>
-    <li>Gitarre</li>
-    <li>Ukulele</li>
-    <li>Keyboard</li>
   </ul>
-
-  <p>Sollten wir aus Zeit- oder Organisationsgründen nicht alle Beiträge unterbringen können, nehmt es uns bitte nicht übel.</p>
 
   <h2 class="headgreen">Unser Beitrag</h2>
 
-  <p><b>Vorstellungsrunde:</b> Wir möchten während der Feier alle kurz vorstellen – zum Beispiel, wie wir uns kennengelernt haben. Ihr könnt gerne selbst etwas erzählen, müsst aber nicht.</p>
-
-  <p><b>Fotowand:</b> Wir gestalten eine Fotowand und freuen uns über 1–3 Fotos von euch/uns. Besonders schön wäre ein Bild aus der Zeit, als wir uns kennengelernt haben.</p>
+  <p><b>Fotowand:</b> Wir wollen eine Fotowand gestalten und würden euch bitten 1–3 Fotos von euch, bzw. uns zusammen, mitzubringen. Besonders schön wäre ein Bild aus der Zeit, als wir uns kennengelernt haben.</p>
 </div>
 
 
