--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 
-<div id="version-date">Version: 20.7.2025<br>Updates:💛💙💚💖 </div>
+<div id="version-date">Version: 23.7.2025<br>Updates:💛💙💚💖 </div>
 
   <!-- Centered heart container -->
   <div id="heartScreen">
@@ -74,7 +74,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 
   <h2 class="headyellow"> Das Fest der Liebe </h2>
  <p>
-  Aber genug von uns! Beim Fest der Liebe die Freundschaft und Gemeinschaft zu euch allen feiern! Mehr Informationen zu Ort, Zeit und Ablauf findet ihr beim blauen Herz 💙.
+  Aber genug von uns! Beim Fest der Liebe wollen wir die Freundschaft und Gemeinschaft zu euch allen feiern! Mehr Informationen zu Ort, Zeit und Ablauf findet ihr beim blauen Herz 💙.
 </p>
 
 <p>
@@ -124,7 +124,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   
   <h2 class="headblue">Wünscht ihr euch etwas?</h2>
   <p>
-  Gerne könnt ihr uns mit einem Beitrag untersützen die Feier zu finanzieren 😊
+  Gerne könnt ihr uns mit einem Beitrag unterstützen, die Feier zu finanzieren 😊
   </p>
   
   
@@ -136,10 +136,8 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 <div id="content-green" style="display:none;">
   <h2 class="headgreen">Programm</h2>
   
-  <p>Das Fest der Liebe soll lebendig werden – wir freuen uns, wenn ihr mit einem Beitrag dabei seid. Was könntet ihr beisteuern?
-  Hier ein paar Ideen; der Kreativität sind natürlich keine Grenzen gesetzt:</p>
-
-  <p>Damit der Ablauf reibungslos klappt, plant bitte eure Programmpunkte im Voraus. Meldet euch hierfür beim „Programm-Komitee“ an:</p>
+  <p>Das Fest der Liebe soll lebendig werden – wir freuen uns, wenn ihr mit einem Beitrag dabei seid.
+    Damit der Ablauf reibungslos klappt, plant bitte eure Programmpunkte im Voraus. Meldet euch hierfür beim „Programm-Komitee“ an:</p>
 
   <ul>
     <li>Alina Koschmieder – Tel. +33 7 82 88 05 78</li>
@@ -154,9 +152,10 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     <li>Zwei Mikrofone</li>
   </ul>
 
-  <h2 class="headgreen">Unser Beitrag</h2>
+  <h2 class="headgreen">Fotowand</h2>
 
-  <p><b>Fotowand:</b> Wir wollen eine Fotowand gestalten und würden euch bitten 1–3 Fotos von euch, bzw. uns zusammen, mitzubringen. Besonders schön wäre ein Bild aus der Zeit, als wir uns kennengelernt haben.</p>
+  <p>Wir wollen eine Fotowand gestalten und würden euch bitten, 1–3 Fotos von euch, bzw. uns zusammen, mitzubringen.
+    Besonders schön wäre ein Bild aus der Zeit, als wir uns kennengelernt haben.</p>
 </div>
 
 
